--- a/src/app/pages/my-faculty/my-faculty.component.css
+++ b/src/app/pages/my-faculty/my-faculty.component.css
@@ -124,12 +124,12 @@
     .submit-button { background: #32CD32; color: var(--text-light); }
     .submit-button:hover { background: #0056b3; }
   }
-  select {
+   select {
     padding: 6px;
     border-radius: 4px;
     border: 1px solid #ddd;
-    background: var(--bg-light);
-    color: var(--text-light);
+    background: #0056b3;
+    color: white;
     font-size: clamp(0.8rem, 2vw, 1rem);
   }
   body.dark-mode select { background: var(--hover-dark); color: var(--text-dark); border-color: #555; }
