--- a/src/app/pages/my-courses/my-courses.component.html
+++ b/src/app/pages/my-courses/my-courses.component.html
@@ -10,19 +10,19 @@
           <p class="subtitle">{{ 'myCourses.subtitle' | transloco }}</p>
           <div class="progress-summary">
             <div class="progress-item">
-              <div class="progress-circle" [style.--percentage]="generalHours/12">
+              <div class="progress-circle" >
                 <span>{{ generalHours }}/12</span>
               </div>
               <p>{{ 'myCourses.generalRequirements' | transloco }}</p>
             </div>
             <div class="progress-item">
-              <div class="progress-circle" [style.--percentage]="facultyHours/72">
+              <div class="progress-circle" >
                 <span>{{ facultyHours }}/72</span>
               </div>
               <p>{{ 'myCourses.facultyRequirements' | transloco }}</p>
             </div>
             <div class="progress-item">
-              <div class="progress-circle" [style.--percentage]="departmentHours/60">
+              <div class="progress-circle" >
                 <span>{{ departmentHours }}/60</span>
               </div>
               <p>{{ 'myCourses.divisionRequirements' | transloco }}</p>
