--- a/src/app/pages/reset-password/reset-password.component.html
+++ b/src/app/pages/reset-password/reset-password.component.html
@@ -10,34 +10,34 @@
       <form [formGroup]="resetPasswordForm" (ngSubmit)="submit()">
         <!-- New Password Field -->
         <div class="field">
-          <label for="newPassword" class="sr-only">{{ 'resetPassword.newPasswordLabel' | transloco }}</label>
+          <label for="password" class="sr-only">{{ 'resetPassword.newPasswordLabel' | transloco }}</label>
           <span class="fa fa-lock"></span>
           <input
             type="password"
-            id="newPassword"
-            formControlName="newPassword"
+            id="password"
+            formControlName="password"
             [placeholder]="'resetPassword.newPasswordPlaceholder' | transloco"
             [attr.aria-label]="'resetPassword.newPasswordLabel' | transloco"
             required
           />
-          <div *ngIf="isSubmitted && fc['newPassword'].invalid" class="error">
+          <div *ngIf="isSubmitted && fc['password'].invalid" class="error">
             {{ 'resetPassword.errors.passwordRequired' | transloco }}
           </div>
         </div>
   
         <!-- Confirm Password Field -->
         <div class="field">
-          <label for="confirmPassword" class="sr-only">{{ 'resetPassword.confirmPasswordLabel' | transloco }}</label>
+          <label for="confirm" class="sr-only">{{ 'resetPassword.confirmPasswordLabel' | transloco }}</label>
           <span class="fa fa-lock"></span>
           <input
             type="password"
-            id="confirmPassword"
-            formControlName="confirmPassword"
+            id="confirm"
+            formControlName="confirm"
             [placeholder]="'resetPassword.confirmPasswordPlaceholder' | transloco"
             [attr.aria-label]="'resetPassword.confirmPasswordLabel' | transloco"
             required
           />
-          <div *ngIf="isSubmitted && fc['confirmPassword'].invalid" class="error">
+          <div *ngIf="isSubmitted && fc['confirm'].invalid" class="error">
             {{ 'resetPassword.errors.confirmPasswordRequired' | transloco }}
           </div>
           <div *ngIf="isSubmitted && resetPasswordForm.hasError('notMatching')" class="error">
