--- a/src/app/pages/my-faculty/my-faculty.component.html
+++ b/src/app/pages/my-faculty/my-faculty.component.html
@@ -1,8 +1,8 @@
 <div class="courses-page">
     <app-student-header></app-student-header>
-  
+
     <div class="navbar-spacer"></div>
-  
+
     <div class="course-manager">
       <div class="tables-container">
         <div class="table-container">
@@ -21,14 +21,20 @@
             <tbody>
               <tr *ngFor="let course of coreCourses" [class.disabled]="!canTakeCourse(course)">
                 <td>{{ course.code }}</td>
-                <td>{{ course.course_Name }}</td>
+                <td>
+                    <ng-container *ngIf="currentLang === 'en'">{{ course.course_Name_en }}</ng-container>
+                    <ng-container *ngIf="currentLang === 'ar'">{{ course.course_Name_ar }}</ng-container>
+                </td>
                 <td>{{ course.hours }}</td>
-                <td>{{ course.prerequest || ('common.none' | transloco) }}</td>
+                <td>
+                    <ng-container *ngIf="currentLang === 'en'">{{ course.prerequest_en || ('common.none' | transloco) }}</ng-container>
+                    <ng-container *ngIf="currentLang === 'ar'">{{ course.prerequest_ar || ('common.none' | transloco) }}</ng-container>
+                </td>
                 <td>
                     <select
                     [(ngModel)]="course.grade"
                     [disabled]="!canTakeCourse(course) || !showAddButtonMap[course.code]"
-                    title="Select grade for {{ course.course_Name }}"
+                    title="Select grade for {{ course.course_Name_en }}"
                   >
                     <option value="none">{{ 'common.none' | transloco }}</option>
                     <option value="A+">A+</option>
@@ -43,7 +49,7 @@
                   </select>
                 </td>
                 <td>
-                  <button 
+                  <button
                     *ngIf="showAddButtonMap[course.code]"
                     class="add-button"
                     (click)="addCourse(course)"
@@ -57,7 +63,7 @@
             </tbody>
           </table>
         </div>
-  
+
         <div class="table-container">
           <h3 class="table-title">{{ 'faculty.electiveSubjects' | transloco }} (9 {{ 'common.hours' | transloco }})</h3>
           <table class="course-table">
@@ -74,14 +80,20 @@
             <tbody>
               <tr *ngFor="let course of electiveCourses" [class.disabled]="!canTakeCourse(course)">
                 <td>{{ course.code }}</td>
-                <td>{{ course.course_Name }}</td>
+                <td>
+                    <ng-container *ngIf="currentLang === 'en'">{{ course.course_Name_en }}</ng-container>
+                    <ng-container *ngIf="currentLang === 'ar'">{{ course.course_Name_ar }}</ng-container>
+                </td>
                 <td>{{ course.hours }}</td>
-                <td>{{ course.prerequest || ('common.none' | transloco) }}</td>
+                <td>
+                    <ng-container *ngIf="currentLang === 'en'">{{ course.prerequest_en || ('common.none' | transloco) }}</ng-container>
+                    <ng-container *ngIf="currentLang === 'ar'">{{ course.prerequest_ar || ('common.none' | transloco) }}</ng-container>
+                </td>
                 <td>
                     <select
                     [(ngModel)]="course.grade"
                     [disabled]="!canTakeCourse(course) || !showAddButtonMap[course.code]"
-                    title="Select grade for {{ course.course_Name }}"
+                    title="Select grade for {{ course.course_Name_en }}"
                   >
                     <option value="none">{{ 'common.none' | transloco }}</option>
                     <option value="A+">A+</option>
@@ -96,7 +108,7 @@
                   </select>
                 </td>
                 <td>
-                  <button 
+                  <button
                     *ngIf="showAddButtonMap[course.code]"
                     class="add-button"
                     (click)="addCourse(course)"
@@ -111,7 +123,7 @@
           </table>
         </div>
       </div>
-  
+
       <div class="summary">
         <p class="total-hours">{{ 'faculty.totalHours' | transloco }}: {{ calculateFacultyHours() }} / 72</p>
       </div>
