--- a/src/app/pages/chatbot/chatbot.component.html
+++ b/src/app/pages/chatbot/chatbot.component.html
@@ -66,7 +66,7 @@
           <line x1="3" y1="18" x2="21" y2="18"></line>
         </svg>
       </button>
-      <h1 *ngIf="!isHistoryOpen">{{ selectedChatId ? ('chatbot.chat' | transloco) : ('chatbot.newChat' | transloco) }}</h1>
+      <!-- <h1 *ngIf="!isHistoryOpen">{{ selectedChatId ? ('chatbot.chat' | transloco) : ('chatbot.newChat' | transloco) }}</h1> -->
     </div>
     
     <div #messagesContainer class="messages-container">
