--- a/src/app/pages/info/info.component.html
+++ b/src/app/pages/info/info.component.html
@@ -9,12 +9,12 @@
       </div>
       
       <div class="language-switcher">
-        <button (click)="switchLanguage('en')" [class.active]="currentLang === 'en'">EN</button>
+        <!-- <button (click)="switchLanguage('en')" [class.active]="currentLang === 'en'">EN</button>
         <span class="separator">|</span>
-        <button (click)="switchLanguage('ar')" [class.active]="currentLang === 'ar'">عربي</button>
-        <button class="theme-toggle-button" (click)="toggleTheme()" aria-label="Toggle dark mode">
+        <button (click)="switchLanguage('ar')" [class.active]="currentLang === 'ar'">عربي</button> -->
+        <!-- <button class="theme-toggle-button" (click)="toggleTheme()" aria-label="Toggle dark mode">
             <i class="fas" [ngClass]="isDarkMode ? 'fa-sun' : 'fa-moon'"></i>
-          </button>
+          </button> -->
       </div>
       
       <div class="right-button">
