--- a/src/app/pages/land/land.component.css
+++ b/src/app/pages/land/land.component.css
@@ -232,3 +232,15 @@ html, body {
     color: #007bff;
     border-bottom: 2px solid #007bff;
 }
+
+.right-button {
+    display: flex;
+    align-items: center;
+    gap: 8px; /* Adjust spacing between items */
+}
+
+.separator {
+    color: #ccc; /* Light gray color for the separator */
+    margin: 0 4px; /* Adjust horizontal spacing around the separator */
+    font-size: 16px; /* Match your button text size */
+}
