--- a/src/app/pages/student-header/student-header.component.css
+++ b/src/app/pages/student-header/student-header.component.css
@@ -426,3 +426,37 @@ body.dark-mode {
       padding-right: 0;
   }
 }
+
+.lang-switcher {
+    min-width: 60px;
+    padding: 8px 12px;
+    border: none;
+    background: transparent;
+    cursor: pointer;
+    font-weight: 500;
+    color: inherit;
+    transition: all 0.3s ease;
+    border-radius: 4px; /* Optional rounded corners */
+    position: relative;
+    color: white;
+}
+
+/* Light mode hover effect */
+
+
+.lang-switcher::after {
+    content: '';
+    position: absolute;
+    width: 0;
+    height: 2px;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: currentColor;
+    transition: width 0.3s ease;
+}
+
+.lang-switcher:hover::after {
+    width: 70%;
+}
+
