--- a/src/app/pages/student-header/student-header.component.html
+++ b/src/app/pages/student-header/student-header.component.html
@@ -3,55 +3,37 @@
         <img src="assets/logo3.png" alt="" class="logo-image" routerLink="/student-page" />
     </div>
 
-
     <div class="top-nav-items">
-      <button class="lang-switcher" (click)="switchLanguage('en')" [class.active]="currentLang === 'en'">EN</button>
-      <button class="lang-switcher" (click)="switchLanguage('ar')" [class.active]="currentLang === 'ar'">عربي</button>
-      <a class="dark-mode-toggle" (click)="toggleTheme()" [title]="'header.toggleTheme' | transloco">
-        <i class="fas" [ngClass]="isDarkMode ? 'fa-sun' : 'fa-moon'"></i>
-        <!-- <span class="nav-text">{{ isDarkMode ? ('header.lightMode' | transloco) : ('header.darkMode' | transloco) }}</span> -->
-      </a>
+        <!-- Single language toggle button -->
+        <button class="lang-switcher" (click)="toggleLanguage()" [title]="'header.toggleLanguage' | transloco">
+            {{ currentLang === 'en' ? 'عربي' : 'EN' }}
+        </button>
+        
+        <a class="dark-mode-toggle" (click)="toggleTheme()" [title]="'header.toggleTheme' | transloco">
+            <i class="fas" [ngClass]="isDarkMode ? 'fa-sun' : 'fa-moon'"></i>
+        </a>
     </div>
   
     <ul class="nav-links">
-      <li>
-        <a routerLink="/student-page" [title]="'header.home' | transloco">
-          <i class="fas fa-home"></i>
-          <span class="nav-text">{{ 'header.home' | transloco }}</span>
-        </a>
-      </li>
-      
-      <li class="menu-container">
-        <a [title]="'header.account' | transloco" routerLink="/profile">
-          <i class="fas fa-user-circle"></i>
-          <span class="nav-text">{{ student.firstName | titlecase }}</span>
-        </a>
-      </li>
-  
-     
-  
-      <!-- <li>
-        <a (click)="toggleTheme()" [title]="'header.toggleTheme' | transloco">
-          <i class="fas" [ngClass]="isDarkMode ? 'fa-sun' : 'fa-moon'"></i>
-          <span class="nav-text">{{ isDarkMode ? ('header.lightMode' | transloco) : ('header.darkMode' | transloco) }}</span>
-        </a>
-      </li> -->
+        <li>
+            <a routerLink="/student-page" [title]="'header.home' | transloco">
+                <i class="fas fa-home"></i>
+                <span class="nav-text">{{ 'header.home' | transloco }}</span>
+            </a>
+        </li>
+        
+        <li class="menu-container">
+            <a [title]="'header.account' | transloco" routerLink="/profile">
+                <i class="fas fa-user-circle"></i>
+                <span class="nav-text">{{ student.firstName | titlecase }}</span>
+            </a>
+        </li>
 
-      <li>
-        <a (click)="logout()" [title]="'header.logout' | transloco">
-          <i class="fas fa-sign-out-alt"></i>
-          <span class="nav-text">{{ 'header.logout' | transloco }}</span>
-        </a>
-      </li>
-  
-      <!-- <li>
-        <div class="language-switcher">
-          <button (click)="switchLanguage('en')" [class.active]="currentLang === 'en'">EN</button>
-          <span class="separator">|</span>
-          <button (click)="switchLanguage('ar')" [class.active]="currentLang === 'ar'">عربي</button>
-        </div>
-      </li> -->
-
-
+        <li>
+            <a (click)="logout()" [title]="'header.logout' | transloco">
+                <i class="fas fa-sign-out-alt"></i>
+                <span class="nav-text">{{ 'header.logout' | transloco }}</span>
+            </a>
+        </li>
     </ul>
-  </div>
+</div>
